--- a/ss4_git_html/bai_tap/tao_cv.html
+++ b/ss4_git_html/bai_tap/tao_cv.html
@@ -13,28 +13,32 @@
 
 
 <LI><H1>EMAIL </H1></LI>
-<a >dinhthongttm@gmail.com</a>
+<h2><a href="course">dinhthongttm@gmail.com</a></h2>
 <HR>
     <LI><H1>ĐỊA CHỈ</H1></LI>
-<P>17 Tôn Đản , Hà Nội</P>
+<h2><P>17 Tôn Đản , Hà Nội</P></h2>
 <HR>
     <LI><H1>SỐ ĐIỆN THOẠI</H1></LI>
-<P>0123456789</P>
+    <h2><P>0123456789</P></h2>
     <HR>
     <LI><H1>BẰNG CẤP</H1></LI>
-<P>bằng Khá -Đại học Bách Khoa -Đà Nẵng</P>
+    <h2><P>bằng Khá -Đại học Bách Khoa -Đà Nẵng</P></h2>
     <HR>
     <LI><H1>HỌC VẤN </H1></LI>
-<P>đại học</P>
+    <h2><P>đại học</P></h2>
     <HR>
     <LI><H1>KĨ NĂNG </H1></LI>
-<P>C++,C,PYTHON,HTML</P>
+    <h2><P>C++,C,PYTHON,HTML</P></h2>
+    <HR>
+    <LI><H1>CHỨNG CHỈ </H1></LI>
+    <h2><a href="https://code.org/congrats/course1" target="_blank">codeorg1</a> </h2>
+    <h2><a href="https://code.org/congrats/course2" target="_blank">codeorg2</a> </h2>
     <HR>
     <LI><H1>KINH NGHIỆM</H1></LI>
-<P>Website bán hàng online, Hệ thống nhận diện khuôn mặt opencv</P>
+    <h2><P>Website bán hàng online, Hệ thống nhận diện khuôn mặt opencv</P></h2>
     <HR>
     <LI><H1>SỞ THÍCH</H1></LI>
-<P>Câu cá, du lịch</P>
+    <h2><P>Câu cá, du lịch</P></h2>
 </UL>
 </body>
 </html>
