--- a/ss5_html_form_and_table/bai_tap/tao_bang_nang_cao_2.html
+++ b/ss5_html_form_and_table/bai_tap/tao_bang_nang_cao_2.html
@@ -1,21 +1,31 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NÂNG CAO2</title>
+    <title>Title</title>
     <style>
-        table {
-            width: 100px;
-        }
-        td {
-            border-collapse: collapse;
+
+        td{
+            border-collapse:collapse;
             border: 1px solid black;
+            text-align: center;
+        }
+        th1{
+            text-align:center;
+            color : blue;
         }
     </style>
+
 </head>
 <body>
-<table>
-    <caption style="color: blue"><b> Tháng 10-October</b></caption>
+<table  height="500px" width="500px" >
+    <caption style="color: blue" ><b><h1>Tháng 10-October</h1> </b></caption>
+
+<!--    <tr>-->
+<!--&lt;!&ndash;        <th colspan="8"> <p class="center" style="color: blue"> <strong> Tháng 10-October </strong> </p> </th>&ndash;&gt;-->
+<!--        <h1>Tháng 10-October</h1>-->
+<!--    </tr>-->
+
     <tr>
         <th style="background: red">C.Nhật</th>
         <th style="background: orange">T.Hai</th>
@@ -81,4 +91,4 @@
     </tr>
 </table>
 </body>
-</html>>
+</html>
