--- a/ss5_html_form_and_table/bai_tap/tao_form_lay_survey_khach_hang.html
+++ b/ss5_html_form_and_table/bai_tap/tao_form_lay_survey_khach_hang.html
@@ -110,7 +110,7 @@
         </tr>
         <tr>
 
-            <td><input type="submit" value="Submit"</td>
+            <td><input type="submit" value="Submit"></td>
             <td></td>
             <td></td>
             <td></td>
