--- a/ss4_git_html/bai_tap/tao_cv.html
+++ b/ss4_git_html/bai_tap/tao_cv.html
@@ -7,38 +7,38 @@
 
 <body>
 <img src="https://taimienphi.vn/tmp/cf/aut/mAKI-top-anh-dai-dien-dep-chat-1.jpg">
-<UL>
-<LI><h1>HỌ VÀ TÊN : SOÁI CA  </h1></LI>
+<ul>
+<li><h1>HỌ VÀ TÊN : SOÁI CA  </h1></li>
 <hr>
 
 
-<LI><H1>EMAIL </H1></LI>
+<li><h1>EMAIL </h1></li>
 <h2><a href="course">dinhthongttm@gmail.com</a></h2>
-<HR>
-    <LI><H1>ĐỊA CHỈ</H1></LI>
-<h2><P>17 Tôn Đản , Hà Nội</P></h2>
-<HR>
-    <LI><H1>SỐ ĐIỆN THOẠI</H1></LI>
+<hr>
+    <li><h1>ĐỊA CHỈ</h1></li>
+<h2><p>17 Tôn Đản , Hà Nội</p></h2>
+<hr>
+    <li><h1>SỐ ĐIỆN THOẠI</h1></li>
     <h2><P>0123456789</P></h2>
-    <HR>
-    <LI><H1>BẰNG CẤP</H1></LI>
-    <h2><P>bằng Khá -Đại học Bách Khoa -Đà Nẵng</P></h2>
-    <HR>
-    <LI><H1>HỌC VẤN </H1></LI>
-    <h2><P>đại học</P></h2>
-    <HR>
-    <LI><H1>KĨ NĂNG </H1></LI>
-    <h2><P>C++,C,PYTHON,HTML</P></h2>
-    <HR>
-    <LI><H1>CHỨNG CHỈ </H1></LI>
+    <hr>
+    <li><h1>BẰNG CẤP</h1></li>
+    <h2><p>bằng Khá -Đại học Bách Khoa -Đà Nẵng</p></h2>
+    <hr>
+    <li><h1>HỌC VẤN </h1></li>
+    <h2><p>đại học</p></h2>
+    <hr>
+    <li><h1>KĨ NĂNG </h1></li>
+    <h2><p>C++,C,PYTHON,HTML</p></h2>
+    <hr>
+    <li><h1>CHỨNG CHỈ </h1></li>
     <h2><a href="https://code.org/congrats/course1" target="_blank">codeorg1</a> </h2>
     <h2><a href="https://code.org/congrats/course2" target="_blank">codeorg2</a> </h2>
-    <HR>
-    <LI><H1>KINH NGHIỆM</H1></LI>
-    <h2><P>Website bán hàng online, Hệ thống nhận diện khuôn mặt opencv</P></h2>
-    <HR>
-    <LI><H1>SỞ THÍCH</H1></LI>
-    <h2><P>Câu cá, du lịch</P></h2>
-</UL>
+    <hr>
+    <li><h1>KINH NGHIỆM</h1></li>
+    <h2><p>Website bán hàng online, Hệ thống nhận diện khuôn mặt opencv</p></h2>
+    <hr>
+    <li><h1>SỞ THÍCH</h1></li>
+    <h2><p>Câu cá, du lịch</p></h2>
+</ul>
 </body>
 </html>
