--- a/ss5_html_form_and_table/thuc_hanh/tao_form_co_ban.html
+++ b/ss5_html_form_and_table/thuc_hanh/tao_form_co_ban.html
@@ -26,8 +26,10 @@
     <p>Name <span style="color: #ff0000">*</span> </p>
     <input type = "text" name="firstname" placeholder="FirstName" size="15"/>
     <input type = "text" name="lastname" placeholder="LastName" size="15"/>
-    <p>Email</p>
-    <input type = "text" name="email" size="35"/>
+    <p>EMAIL
+</p>
+    <input type = "text" name="EMAIL
+" size="35"/>
     <p>Phone Number</p>
     <input type = "text" name="phone1" size="5"/> -
     <input type = "text" name="phone2" size="5"/> -
