--- a/ss7_bien_kieudulieu_toantu/thuc_hanh/tinh_hinh_chu_nhat.html
+++ b/ss7_bien_kieudulieu_toantu/thuc_hanh/tinh_hinh_chu_nhat.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="hcn.js"></script>
 </head>
 <body>
+<script src="hcn.js">
 
-
+</script>
 </body>
 </html>
