--- a/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/chu_vi_hinh_tron.html
+++ b/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/chu_vi_hinh_tron.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    nhapr = prompt ("nhap ban kinh hinh tron");
-    r=parseInt (nhapr);
-    let cv=r*2*3.14;
+   let  nhapR = prompt ("nhap ban kinh hinh tron");
+    let R =parseInt (nhapR);
+    let cv=R*2*3.14;
     document.write("dien tich hinh tron la " +cv )
 </script>
 </body>
