--- a/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/chuyen_doC_doF.html
+++ b/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/chuyen_doC_doF.html
@@ -5,12 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-<script>
-    nhapdoC=prompt("nhap do c")
-    doC = parseInt (nhapdoC)
-    let doF = ((doC/5)*9)+32;
-    document.write("do F la :"+doF)
-</script>
 
 </body>
 </html>
+<script>
+    // nhapdoC=prompt("nhap do c")
+    // doC = parseInt (nhapdoC)
+    // let doF = ((doC/5)*9)+32;
+    // document.write("do F la :"+doF)
+    let nhapdoC = +prompt("nhap do c");
+    // let doC = parseInt(nhapdoC);
+    let f = ((nhapdoC/5)*9)+32;
+    document.write("ket qua :" +f);
+</script>
