--- a/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/dien_tich_hinh_tron.html
+++ b/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/dien_tich_hinh_tron.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
-    nhapr = prompt ("nhap ban kinh hinh tron");
-    r=parseInt (nhapr);
+    let nhapR = prompt ("nhap ban kinh hinh tron");
+    let R=parseInt (nhapr);
     let dt=r*r*3.14;
     document.write("dien tich hinh tron la " +dt )
 </script>
