--- a/ss5_html_form_and_table/bai_tap/tao_bang_don_gian.html
+++ b/ss5_html_form_and_table/bai_tap/tao_bang_don_gian.html
@@ -7,39 +7,43 @@
         p.left {
             text-align: left;
         }
+
         p.right {
             text-align: right;
         }
+
         p.center {
             text-align: center;
         }
-        table { border-collapse:collapse }
+
+        table {
+            border-collapse: collapse
+        }
 
     </style>
 </head>
 <body>
 
 
-
-<table border="1" width="600px" style="color: #3399FF" >
+<table border="1" width="600px" style="color: #3399FF">
     <tr>
-        <td colspan="2"> <p class="center" style="color: blue"> <strong> THỜI KHÓA BIỂU </strong> </p> </td>
+        <td colspan="2"><p class="center" style="color: blue"><strong> THỜI KHÓA BIỂU </strong></p></td>
     </tr>
     <tr>
-        <td> <p class="left" >  Lớp: T0908I </p> </td>
-        <td> <p class="right" >  Thời gian học: 13h30 - 17h30 </p> </td>
+        <td><p class="left"> Lớp: T0908I </p></td>
+        <td><p class="right"> Thời gian học: 13h30 - 17h30 </p></td>
     </tr>
     <tr>
-        <td> <p class="left" >  Giáo viên: KhoaNV </p> </td>
-        <td> <p class="right" >  Ngày học: Thứ 3,5,7 </p> </td>
+        <td><p class="left"> Giáo viên: KhoaNV </p></td>
+        <td><p class="right"> Ngày học: Thứ 3,5,7 </p></td>
     </tr>
     <tr>
-        <td> <p class="left" >  Phòng học: Class3/Lab3 </p> </td>
-        <td> </td>
+        <td><p class="left"> Phòng học: Class3/Lab3 </p></td>
+        <td></td>
     </tr>
     <br>
 </table>
-<table  border="1" width="600px">
+<table border="1" width="600px">
     <tr>
         <td colspan="3"></td>
         <td bgcolor="yellow">Thứ 3</td>
