--- a/ss5_html_form_and_table/bai_tap/tao_form_don_gian.html
+++ b/ss5_html_form_and_table/bai_tap/tao_form_don_gian.html
@@ -3,89 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<style>
-body{
-    background-color: lightskyblue;
+    <style>
+        body {
+            background-color: lightskyblue;
 
 
-}
+        }
 
-    table{
+        table {
 
-        border-collapse: collapse;
+            border-collapse: collapse;
 
-        background-color: white ;
+            background-color: white;
 
-    }
-    td, th {
-         padding: 5px;
-     }
-    td{
-        color : blue;
+        }
 
-    }
-    th{
-        font-family: 'Patua One', cursive;
-        font-size:16px;
-        color:#fff;
-        text-align:center;
-        padding:5px;
-        background-color: orange;
-        border-color: white;
+        td, th {
+            padding: 5px;
+        }
 
-    }
+        td {
+            color: blue;
 
-</style>
+        }
+
+        th {
+            font-family: 'Patua One', cursive;
+            font-size: 16px;
+            color: #fff;
+            text-align: center;
+            padding: 5px;
+            background-color: orange;
+            border-color: white;
+
+        }
+
+    </style>
 </head>
 <body>
 <form>
- <table width="50%"  >
-     <tr>
+    <table width="50%">
+        <tr>
 
-         <th colspan="4">SỞ THÍCH CỦA BẠN</th>
+            <th colspan="4">SỞ THÍCH CỦA BẠN</th>
 
-     </tr>
-     <tr>
-         <td>Họ và tên</td>
-         <td colspan="3" ><input type="text" name="yourname" size="40" ></td>
-         <td></td>
-         <td></td>
-     </tr>
-     <tr>
-         <td>Email</td>
-         <td colspan="3"><input type="email" name="email"size="25"></td>
-         <td></td>
-         <td></td>
-     </tr>
-     <tr>
-         <td>Sở thích</td>
-         <td><input name="hobby" value="sport" type="checkbox"/>Thể Thao</td>
-         <td><input name="hobby" value="music" type="checkbox"/>Âm nhạc</td>
-         <td><input name="hobby" value="readbook" type="checkbox"/>Đọc sách</td>
-     </tr>
-     <tr>
-         <td></td>
-         <td><input name="hobby" value="surfweb" type="checkbox"/>Lướt web</td>
-         <td><input name="hobby" value="playgame" type="checkbox"/>Chơi game</td>
-         <td><input name="hobby" value="firm" type="checkbox"/>Điện ảnh</td>
-     </tr>
-     <tr>
-         <td></td>
-         <td><input name="hobby" value="travel" type="checkbox"/>Du lịch</td>
-         <td></td>
-         <td></td>
-     </tr>
-     <tr>
-         <td></td>
-         <td><button type="submit" value="Gửi thông điệp">Gửi thông điệp</button></td>
-         <td><input type="reset" value="Nhập lại"/></td>
-         <td></td>
-     </tr>
+        </tr>
+        <tr>
+            <td>Họ và tên</td>
+            <td colspan="3"><input type="text" name="yourname" size="40"></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td colspan="3"><input type="email" name="email" size="25"></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Sở thích</td>
+            <td><input name="hobby" value="sport" type="checkbox"/>Thể Thao</td>
+            <td><input name="hobby" value="music" type="checkbox"/>Âm nhạc</td>
+            <td><input name="hobby" value="readbook" type="checkbox"/>Đọc sách</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input name="hobby" value="surfweb" type="checkbox"/>Lướt web</td>
+            <td><input name="hobby" value="playgame" type="checkbox"/>Chơi game</td>
+            <td><input name="hobby" value="firm" type="checkbox"/>Điện ảnh</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input name="hobby" value="travel" type="checkbox"/>Du lịch</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <button type="submit" value="Gửi thông điệp">Gửi thông điệp</button>
+            </td>
+            <td><input type="reset" value="Nhập lại"/></td>
+            <td></td>
+        </tr>
 
 
-
- </table>
-
+    </table>
 
 
 </form>
