--- a/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/chuyen_doC_doF.html
+++ b/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/chuyen_doC_doF.html
@@ -13,8 +13,8 @@
     // doC = parseInt (nhapdoC)
     // let doF = ((doC/5)*9)+32;
     // document.write("do F la :"+doF)
-    let nhapdoC = +prompt("nhap do c");
+    let nhapDoC = +prompt("nhap do c");
     // let doC = parseInt(nhapdoC);
-    let f = ((nhapdoC/5)*9)+32;
-    document.write("ket qua :" +f);
+    let f = ((nhapDoC / 5) * 9) + 32;
+    document.write("ket qua :" + f);
 </script>
