--- a/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/diem_trung_binh.html
+++ b/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/diem_trung_binh.html
@@ -8,13 +8,13 @@
 <script>
 
     let nhapDiemSinh = +prompt("nhap diem sinh");
-    let nhapDiemHoa =+prompt ("nhap diem hoa");
+    let nhapDiemHoa = +prompt("nhap diem hoa");
     let nhapDiemLy = +prompt("nhap diem ly");
     // let dieminh = parseInt(nhapdiemsinh) ;
     // let diemhoa=parseInt(nhapdiemhoa);
     // let diemly=parseInt(nhapdiemly);
-    let tb = (nhapDiemSinh+nhapDiemHoa+nhapDiemLy)/3
-    document.write("diem trung binh: "+tb)
+    let trungBinh = (nhapDiemSinh + nhapDiemHoa + nhapDiemLy) / 3
+    document.write("diem trung binh: " + trungBinh)
 
 </script>
 </body>
