--- a/ss5_html_form_and_table/bai_tap/tao_bang_nang_cao.html
+++ b/ss5_html_form_and_table/bai_tap/tao_bang_nang_cao.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <title>CHESS TABLE</title>
     <style>
-        table { border-collapse:collapse }
-        body{background-color:orange;}
+        table {
+            border-collapse: collapse
+        }
+
+        body {
+            background-color: orange;
+        }
     </style>
 </head>
 <body>
 <table align="center" border="0" height="800px" width="800px">
     <tr>
-        <th width="50" height="50" bgcolor="orange"></th>
-        <th width="50" height="50" bgcolor="orange">1</th>
-        <th width="50" height="50" bgcolor="orange">2</th>
-        <th width="50" height="50" bgcolor="orange">3</th>
+        <th widienTichh="50" height="50" bgcolor="orange"></th>
+        <th widienTichh="50" height="50" bgcolor="orange">1</th>
+        <th widienTichh="50" height="50" bgcolor="orange">2</th>
+        <th widienTichh="50" height="50" bgcolor="orange">3</th>
         <th width="50" height="50" bgcolor="orange">4</th>
         <th width="50" height="50" bgcolor="orange">5</th>
         <th width="50" height="50" bgcolor="orange">6</th>
@@ -107,7 +112,7 @@
 
     </tr>
     <tr>
-        <th width="50" height="50" bgcolor="orange" >H</th>
+        <th width="50" height="50" bgcolor="orange">H</th>
         <td width="100" height="100" bgcolor="black"></td>
         <td width="100" height="100" bgcolor="white"></td>
         <td width="100" height="100" bgcolor="black"></td>
