--- a/ss5_html_form_and_table/bai_tap/tao_form_lay_survey_khach_hang.html
+++ b/ss5_html_form_and_table/bai_tap/tao_form_lay_survey_khach_hang.html
@@ -12,33 +12,36 @@
     .table2 {
         font-family: arial, sans-serif;
         border-collapse: collapse;
-        width: 100%;}
+        width: 100%;
+    }
+
     .table2 td, th {
         border: 1px solid #dddddd;
         text-align: left;
         padding: 8px;
     }
+
     .table2 tr:nth-child(odd) {
 
-        background-color:#dddddd;
+        background-color: #dddddd;
     }
 
 </style>
 <body>
-<form method="get" action="simpleform.html" class = "wufoo">
+<form method="get" action="simpleform.html" class="wufoo">
     <h2>Market Research Survey</h2>
     <p>Please take a few moments to complete this satisfaction survey.</p>
     <p>What is your age range?</p>
 
     <select>
-        <option value = "  ">18-24</option>
+        <option value="  ">18-24</option>
         <option>25-34</option>
         <option>35-50</option>
         <option>50+</option>
     </select>
     <p>What is your age range?</p>
     <select>
-        <option value = "  ">$0-$25,000</option>
+        <option value="  ">$0-$25,000</option>
         <option>$25,001-$50,000</option>
         <option>$50,001-$100,000</option>
         <option>$100,000+</option>
@@ -48,7 +51,7 @@
     <input type="radio" name="gender"/> Female <br/>
     <input type="radio" name="gender"/> Nonbinary <br/>
     <input type="radio" name="gender"/> Other<br/>
-    <input type = "text" name="text"  size="15"/>
+    <input type="text" name="text" size="15"/>
     <p>Which of the following products have your purchased in the last 2 months. Please check all that apply.</p>
     <input type="checkbox" name="gender"/>Product 1 <br/>
     <input type="checkbox" name="gender"/> Product 2 <br/>
@@ -63,9 +66,9 @@
     <table>
         <tr>
             <td>$</td>
-            <td><input type = "text" name="text"  size="10"/></td>
+            <td><input type="text" name="text" size="10"/></td>
             <td>.</td>
-            <td><input type = "text" name="text"  size="3"/></td>
+            <td><input type="text" name="text" size="3"/></td>
         </tr>
         <td></td>
         <td>Dollar</td>
@@ -74,7 +77,7 @@
 
     </table>
     <p>What features would you like to see in the new product.</p>
-    <td> <textarea cols="50" rows="4"> </textarea></td>
+    <td><textarea cols="50" rows="4"> </textarea></td>
     <br>
 
     <p>What features would you like to see in the new product.</p>
@@ -121,12 +124,8 @@
     </table>
 
 
-
-
 </form>
 </body>
-
-
 
 
 </body>
