--- a/ss5_html_form_and_table/thuc_hanh/tao_bang_co_ban.html
+++ b/ss5_html_form_and_table/thuc_hanh/tao_bang_co_ban.html
@@ -1,21 +1,23 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <title> Table simple </title>
     <style>
         table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;}
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
         td, th {
             border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
-    }
+        }
+
         tr:nth-child(even) {
 
-            background-color:#dddddd;
+            background-color: #dddddd;
         }
     </style>
 
