--- a/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/dien_tich_hinh_tron.html
+++ b/ss7_bien_kieudulieu_toantu/bai_tap/bien_kieudulieu_toantu/dien_tich_hinh_tron.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    let nhapR = prompt ("nhap ban kinh hinh tron");
-    let R=parseInt (nhapr);
-    let dt=r*r*3.14;
-    document.write("dien tich hinh tron la " +dt )
+    let nhapR = prompt("nhap ban kinh hinh tron");
+    let R = parseInt(nhapR);
+    let dienTich = R * R * 3.14;
+    document.write("dien tich hinh tron la " + dienTich)
 </script>
 </body>
 </html>
