--- a/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_switch_case/bai3.html
+++ b/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_switch_case/bai3.html
@@ -9,15 +9,13 @@
 </body>
 </html>
 <script>
-    a= +prompt("nhap a");
-    if (a>0){
+    a = +prompt("nhap a");
+    if (a > 0) {
         alert(1);
 
-    }
-    else if(a<0){
+    } else if (a < 0) {
         alert(-1)
-    }
-    else {
+    } else {
         alert(0)
     }
 </script>
