--- a/ss9_cau_truc_dieu_kien2/thuc_hanh/su_kien_ban_phim.html
+++ b/ss9_cau_truc_dieu_kien2/thuc_hanh/su_kien_ban_phim.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body onload="docReady()">
-<img id="nobita" src="https://upload.wikimedia.org/wikipedia/vi/2/2c/Nobita.png" style="position:absolute;left:0; top:0;" height="100" width="80"/>
+<img id="nobita" src="https://upload.wikimedia.org/wikipedia/vi/2/2c/Nobita.png"
+     style="position:absolute;left:0; top:0;" height="100" width="80"/>
 
 </body>
 </html>
@@ -14,19 +15,23 @@
         let element = document.getElementById("nobita");
         element.style.top = parseInt(element.style.top) - 5 + 'px';
     }
+
     function downArrowPressed() {
         var element = document.getElementById("nobita");
         element.style.top = parseInt(element.style.top) + 5 + 'px';
     }
+
     function leftArrowPressed() {
         var element = document.getElementById("nobita");
         element.style.left = parseInt(element.style.left) - 5 + 'px';
     }
+
     function rightArrowPressed() {
         var element = document.getElementById("nobita");
         element.style.left = parseInt(element.style.left) + 5 + 'px';
 
     }
+
     function moveSelection(evt) {
         switch (evt.keyCode) {
             case 37:
@@ -43,6 +48,7 @@
                 break;
         }
     }
+
     function docReady() {
         window.addEventListener('keydown', moveSelection);
     }
