--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/ung_dung_chuyen_doi_tien_te.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/ung_dung_chuyen_doi_tien_te.html
@@ -28,7 +28,7 @@
             </select>
         </td>
         <td>
-            <button onclick="chuyentien()" bgcolor="#483d8b"><b>Convert</b></button>
+            <button onclick="chuyenTien()" bgcolor="#483d8b"><b>Convert</b></button>
         </td>
     </tr>
 </table>
@@ -39,7 +39,7 @@
 </html>
 
 <script>
-    function chuyentien() {
+    function chuyenTien() {
         let amount = document.getElementById("amount").value;
         let fromc = document.getElementById("from").value;
         let to = document.getElementById("to").value;
