--- a/ss9_cau_truc_dieu_kien2/bai_tap/may_tinh_don_gian.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/may_tinh_don_gian.html
@@ -3,8 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        table {
+            border-collapse: collapse
+
+        }
+        button {
+            width: 100%;
+        }
+
+
+
+
+    </style>
 </head>
 <body>
+<table border="1"   style="color:blue">
+    <tr style="text-align: right" width="50" height="50">
+        <td colspan="4">
 
+        </td>
+
+    </tr>
+    <tr style="text-align:center" >
+        <td >
+            <button type="button" value="1">1</button>
+        </td >
+        <td >
+            <button type="button" value="2">2</button>
+        </td>
+        <td >
+            <button type="button" value="3">3</button>
+        </td>
+        <td>
+            <button onclick = "phepCong() " > +</button>
+        </td>
+    </tr>
+    <tr style="text-align:center">
+        <td >
+            <button type="button" value="4">4</button>
+        </td>
+        <td >
+            <button type="button" value="5">5</button>
+        </td>
+        <td >
+            <button type="button" value="6">6</button>
+        </td>
+        <td >
+            <button onclick="phepTru()">-</button>
+        </td>
+    </tr>
+    <tr style="text-align:center">
+        <td >
+            <button type="button" value="7">7</button>
+        </td>
+        <td >
+            <button type="button" value="8">8</button>
+        </td>
+        <td >
+            <button type="button" value="9">9   </button>
+        </td>
+        <td w>
+            <button onclick =" phepNhan()">x</button>
+        </td>
+    </tr>
+    <tr style="text-align:center" >
+        <td >
+            <button type="button" value="C">C</button>
+        </td>
+        <td >
+            <button type="button" value="0">0</button>
+        </td>
+        <td >
+            <button onclick = "bang">=</button>
+        </td>
+       <td >
+           <button onclick ="phepChia">/</button>
+       </td>
+    </tr>
+</table>
 </body>
 </html>
+<script>
+function phepCong(){
+
+}
+function phepNhan(){
+
+}
+function  phepChia(){
+
+}
+function phepTru(){
+
+}
+function bang(){
+
+}
+</script>
