--- a/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_switch_case/bai3.html
+++ b/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_switch_case/bai3.html
@@ -9,11 +9,11 @@
 </body>
 </html>
 <script>
-    a = +prompt("nhap a");
-    if (a > 0) {
+    so = +prompt("nhap mot so ");
+    if (so > 0) {
         alert(1);
 
-    } else if (a < 0) {
+    } else if (so < 0) {
         alert(-1)
     } else {
         alert(0)
