--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieudulieu_toantu/chuyen_doC_doF.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieudulieu_toantu/chuyen_doC_doF.html
@@ -15,6 +15,6 @@
     // document.write("do F la :"+doF)
     let nhapDoC = +prompt("nhap do c");
     // let doC = parseInt(nhapdoC);
-    let f = ((nhapDoC / 5) * 9) + 32;
+    let f = (nhapDoC / 5* 9) + 32;
     document.write("ket qua :" + f);
 </script>
