--- a/ss9_cau_truc_dieu_kien2/bai_tap/tinh_chi_so_can_nang.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/tinh_chi_so_can_nang.html
@@ -15,12 +15,8 @@
     let cannang = prompt("nhap can nang");
     // let h = parseInt(chieucao);
     // let cn = parseInt(cannang);
-    let bmi = (cannang / (chieucao * chieucao))
-    document.write("chi so BMI :" + bmi)
-
-    function interpretation() {
-
-    }
+    let bmi = (cannang / (chieucao * chieucao));
+    document.write("chi so BMI :" + bmi);
 
     if (bmi < 18)
         document.write("Underweight");
