--- a/ss9_cau_truc_dieu_kien2/bai_tap/tinh_so_ngay.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/tinh_so_ngay.html
@@ -7,7 +7,7 @@
 <body>
 
 <input type="number" min="1" max="12" id="thang" placeholder="Nhập tháng" style="width:10%">
-<button onclick="check_month()">Tính số ngày</button>
+<button onclick="kiemTraThang()">Tính số ngày</button>
 
 <p id="result">ket qua </p>
 
@@ -15,7 +15,7 @@
 
 </html>
 <script>
-    function check_month() {
+    function kiemTraThang() {
         // let number1 = document.getElementById("number1").value;
         let thang = +document.getElementById("thang").value;
         switch (thang) {
