--- a/ss9_cau_truc_dieu_kien2/test.html
+++ b/ss9_cau_truc_dieu_kien2/test.html
@@ -1,61 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Good-Fast-Cheap</title>
     <style>
-        button {
-            width: 100%;
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+            margin: 10px;
         }
 
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        input:checked+.good {
+            background-color: rgb(12, 209, 94);
+        }
+
+        input:checked+.cheap {
+            background-color: rgb(54, 16, 158);
+        }
+
+        input:checked+.fast {
+            background-color: rgb(255, 9, 9);
+        }
+
+        input:checked+.slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+        }
+
+        /* Rounded sliders */
+        .slider.round {
+            border-radius: 34px;
+        }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+
+        span p {
+            display: inline-block;
+        }
     </style>
 </head>
+
 <body>
-<input type="text" id="view"><br><br>
-<div class="thang">
-    <table>
-        <tr>
-            <td><button type="button" name="btn" value ="1" onclick="inputValue(this.value)"> 1 </button></td>
-            <td><button type="button" name="btn" value ="2" onclick="inputValue(this.value)"> 2 </button></td>
-            <td><button type="button" name="btn" value ="3"  onclick="inputValue(this.value)"> 3 </button></td>
-            <td><button type="button" name="op" value ="+"onclick="inputValue(this.value)"> + </button></td>
-        </tr>
 
-        <tr>
-            <td><button type="button" name="btn" value ="4" onclick="inputValue(this.value)"> 4 </button></td>
-            <td><button type="button" name="btn" value ="5" onclick="inputValue(this.value)"> 5 </button></td>
-            <td><button type="button" name="btn" value ="6" onclick="inputValue(this.value)"> 6 </button></td>
-            <td><button type="button" name="op" value ="-" onclick="inputValue(this.value)"> - </button></td>
-        </tr>
-        <tr>
-            <td><button type="button" name="btn" value ="7" onclick="inputValue(this.value)"> 7 </button></td>
-            <td><button type="button" name="btn" value ="8" onclick="inputValue(this.value)"> 8 </button></td>
-            <td><button type="button" name="btn" value ="9" onclick="inputValue(this.value)"> 9</button></td>
-            <td><button type="button" name="op" value ="*" onclick="inputValue(this.value)"> * </button></td>
-        </tr>
-        <tr>
-            <td><button type="button" onclick="xoa();"> AC </button></td>
-            <td><button type="button" name="btn" onclick="inputValue(this.value)"> 0 </button></td>
-            <td><button  name= "reusult" onclick="result();"> = </button></td>
-            <td><button type="button" name="op" value ="/" onclick="inputValue(this.value)"> / </button></td>
-        </tr>
-    </table>
+<label class="switch">
+    <input type="checkbox" id="g" onclick=switchGood() >
+    <span class="slider round good"></span>
+</label>
+<span>
+        <p><b>Good</b></p>
+    </span>
+<br />
+<label class="switch">
+    <input type="checkbox" id="c" onclick=switchCheap()>
+    <span class="slider round cheap"></span>
+</label>
+<span>
+        <p><b>Cheap</b></p>
+    </span>
+<br />
+<label class="switch">
+    <input type="checkbox" id="f" onclick=switchFast()>
+    <span class="slider round fast"></span>
+</label>
+<span>
+        <p><b>Fast</b></p>
+    </span>
+<script>
 
-</div>
-<script >
-    let view = document.getElementById("view");
-    function inputValue(value) {
-        view.value += value;
+    function switchGood() {
+        var isGood = document.getElementById("g").checked;
+        var isCheap = document.getElementById("c").checked;
+        var isFast = document.getElementById("f").checked;
+        console.log(isGood,isCheap,isFast);
+        if (isCheap && isFast) {
+            if (Math.random() < 0.5) {
+                document.getElementById("c").checked = false;
+            } else {
+                document.getElementById("f").checked = false;
+            }
+        }
     }
-    function result() {
-        let result = eval(view.value);
-        view.value = result;
+    function switchCheap() {
+        var isGood = document.getElementById("g").checked;
+        var isCheap = document.getElementById("c").checked;
+        var isFast = document.getElementById("f").checked;
+        console.log(isGood,isCheap,isFast);
+        if (isGood && isFast) {
+            if (Math.random() < 0.5) {
+                document.getElementById("g").checked = false
+            } else {
+                document.getElementById("f").checked = false
+            }
+        }
     }
-    function xoa() {
-        view.value="";
+    function switchFast() {
+        var isGood = document.getElementById("g").checked;
+        var isCheap = document.getElementById("c").checked;
+        var isFast = document.getElementById("f").checked;
+        console.log(isGood,isCheap,isFast);
+        if (isGood && isCheap) {
+            if (Math.random() < 0.5) {
+                document.getElementById("c").checked = false
+            } else {
+                document.getElementById("f").checked = false
+            }
+        }
     }
+
 </script>
 </body>
+
 </html>
