--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai12.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai12.html
@@ -8,3 +8,8 @@
 
 </body>
 </html>
+<script>
+    let nhapThang = +prompt("nhap so Thang vay");
+    let nhapTien = +prompt("nhap so Tien ");
+    alert("so tien lai : " + (10*Math.pow(+(1+5/100), 10)))
+</script>
