--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai7.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien1/bai7.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<!--Viết chương trình C++ để tính cước điện thoại bàn cho một hộ gia đình với các thông số như sau:-->
+<!--Phí thuê bao bắt buộc là 25 nghìn.-->
+<!--600 đồng cho mỗi gọi của 50 phút đầu tiên.-->
+<!--400 đồng cho mỗi phút gọi của 150 phút tiếp theo.-->
+<!--200 đồng cho bất kỳ mỗi phút nào sau 200 phút đầu tiên.-->
 <body>
 
 </body>
 </html>
+<script>
+    //25000 la cuoc co dinh
+    const coDinh = +25000
+
+    let soPhut = +prompt (" nhap so phut goi : ");
+
+    if ( soPhut <= 50 ){
+        alert("cuoc dien thoai :  "+(coDinh+soPhut*600) +"Đ");
+
+    }
+    else if(soPhut<=200){
+        alert("cuoc dien thoai : " +(coDinh+50*600+(soPhut-50)*400));
+    }
+    else {
+        alert("cuoc dien thoai  :" +(coDinh+50*600+(soPhut-50)*400+(soPhut-200)*200));
+    }
+</script>
