--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai10.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai10.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!--TT	Số kWh sử dụng	Giá bán điện (đồng/kWh)-->
+<!--Bậc 1	Cho kWh từ 0 - 50	1.678-->
+<!--Bậc 2	Cho kWh từ 51 - 100	1.734-->
+<!--Bậc 3	Cho kWh từ 101 - 200	2.014-->
+<!--Bậc 4	Cho kWh từ 201 - 300	2.536-->
+<!--Bậc 5	Cho kWh từ 301 - 400	2.834-->
+<!--Bậc 6	Cho kWh từ 401 trở lên	2.927-->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,3 +16,32 @@
 
 </body>
 </html>
+<script>
+
+
+
+    let kWh = +prompt (" nhap so hWh su dung : ");
+
+    if ( kWh <= 50 ){
+        alert("tien dien :"+1.678*kWh );
+
+    }
+    else if(kWh<=100){
+        alert("tien dien :" +((1.678*50)+((kWh-50)*1.734)) );
+    }
+    else if(kWh<=200){
+        alert("tien dien :" +(1.678*50+1.734*50+(kWh-100)*2.014));
+
+    }
+    else if(kWh<=300){
+        alert("tien dien :" +(1.678*50+1.734*50+100*2.014+(kWh-200)*2.536 ));
+    }
+    else if(kWh<=400){
+        alert("tien dien :"  +(1.678*50+1.734*50+100*2.014+2.536*100+(kWh-300)*2.834) );
+    }
+    else{
+        alert("tien dien :" +(1.678*50+1.734*50+100*2.014+2.536*100+2.834*100+ (kWh-400)*2.927 ));
+    }
+
+
+</script>
