--- a/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai6.html
+++ b/ss9_cau_truc_dieu_kien2/bai_tap/cau_truc_dieu_kien2/bai6.html
@@ -8,3 +8,22 @@
 
 </body>
 </html>
+<!--phương trình ax + b = 0-->
+<script>
+    let a = +prompt("nhap so A");
+    let b = +prompt("nhap so B");
+    if( a===0 ){
+        if(b===0)
+        {
+            alert("phuong trinh vo so nghiem")
+
+        }
+        else{
+            alert("phuong trinh  vo nghiem ")
+        }
+
+    }
+    else
+        alert("phuong trinh co nghiem la x=-b/a  :  " +(-b/a))
+
+</script>
